clusters/k8s-keiretsu/apps/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  selector:
    app: frigate
  ports:
    - name: web
      port: 8971  # The port the service will be accessible on externally
      targetPort: 8971  # The port inside the container to forward traffic to
    - name: rtsp
      port: 8554
      targetPort: 8554
    - name: stream-8555-tcp
      port: 8555
      targetPort: 8555
      protocol: TCP
    - name: stream-8555-udp
      port: 8555
      targetPort: 8555
      protocol: UDP
  type: LoadBalancer  # This makes the service a LoadBalancer
  loadBalancerIP: 10.96.10.12
